--- a/magi.conf
+++ b/magi.conf
@@ -1,2 +1,16 @@
-rpcuser = user
-rpcpassword = x
+listen=1 #allow incoming connections
+posii=1 #enable mPoS-II
+server=1 #allow rpc commands
+#daemon=1 #runs magid in the background
+rpcuser=user
+rpcpassword=x
+stakesplitthreshold=750
+stakecombinethreshold=250
+addnode=82.65.215.193
+addnode=51.89.116.25
+addnode=146.59.3.53
+addnode=51.89.116.26
+addnode=163.172.122.60
+addnode=yanis-boucherk.dynamic-dns.net
+#rpcport=8232 #for solomining
+#rpcallowip=127.0.0.1 #for solomining
